the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: ClusterIP
  selector:
    app: the-project
  ports:
    - port: 8080
      targetPort: 8080
